--- a/portfolio_project/index.html
+++ b/portfolio_project/index.html
@@ -33,7 +33,7 @@
     </nav>
     <main>
         <div class="about" >
-            <a class="promotional-img" href="#">Book Now at 30% OFF</a>
+            <a class="promotional-img" href="#">Book Now at 30% OFF</a> <br>
             <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero obcaecati, perferendis dolorem eius exercitationem similique ipsam voluptatum? Qui cumque voluptate quam unde necessitatibus repellat itaque consectetur, laudantium magni, sint eveniet porro corrupti voluptatibus illo nostrum optio illum exercitationem iusto minima culpa eius quisquam dicta. Illo voluptas maiores ipsam nobis. Culpa.</p>
         </div>
 
